Updated inspect cmd